--- a/style/style.css
+++ b/style/style.css
@@ -63,12 +63,12 @@
 
 .pure-button {
   border-radius: 0;
-  background-color: #FFDD00;
-  color: #0F2446; }
+  background-color: #CC2A41;
+  color: #fff; }
   .pure-button:hover, .pure-button:focus {
     background-image: none;
-    background-color: #0F2446;
-    color: #FFDD00;
+    background-color: #fff;
+    color: #CC2A41;
     transition: all 0.7s ease;
     -webkit-transition: all 0.7s ease;
     -moz-transition: all 0.7s ease;
@@ -80,7 +80,7 @@ Either pass the px number through individually, or set it as a variable */
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-  border: 0.5em 1em solid transparent; }
+  padding: 0.5em 1em; }
   .pure-g > div[class*="pure-u-"] input {
     width: 100%;
     line-height: 1;
@@ -107,14 +107,61 @@ Either pass the px number through individually, or set it as a variable */
 #footer {
   padding: 1em; }
 
+#wrapper {
+  background: #FFEDBF; }
+
+.toggle-body {
+  display: none;
+  text-align: center; }
+  .toggle-body .body-img {
+    min-height: 15em;
+    position: relative; }
+    .toggle-body .body-img .body-text {
+      text-align: left;
+      position: absolute;
+      bottom: 0;
+      background: rgba(204, 42, 65, 0.7);
+      color: #fff;
+      width: 100%;
+      padding: 1em; }
+  .toggle-body .next {
+    margin-top: 1em; }
+  .toggle-body .prev {
+    margin-bottom: 1em; }
+
+#breakfast .body-img {
+  background: url(../min_images/bloodies.jpg);
+  background-position: center center;
+  background-size: cover; }
+
+#massage .body-img {
+  background: url(../min_images/massage.jpg);
+  background-position: center center;
+  background-size: cover; }
+
+#lunch .body-img {
+  background: url(../min_images/oysters.jpg);
+  background-position: center center;
+  background-size: cover; }
+
+#doggos .body-img {
+  background: url(../min_images/doggos.jpg);
+  background-position: center center;
+  background-size: cover; }
+
+#drinks .body-img {
+  background: url(../min_images/gin.jpg);
+  background-position: center center;
+  background-size: cover; }
+
 .pure-button {
   border-radius: 0;
-  background-color: #FFDD00;
-  color: #0F2446; }
+  background-color: #CC2A41;
+  color: #fff; }
   .pure-button:hover, .pure-button:focus {
     background-image: none;
-    background-color: #0F2446;
-    color: #FFDD00;
+    background-color: #fff;
+    color: #CC2A41;
     transition: all 0.7s ease;
     -webkit-transition: all 0.7s ease;
     -moz-transition: all 0.7s ease;
@@ -124,12 +171,12 @@ Either pass the px number through individually, or set it as a variable */
 Either pass the px number through individually, or set it as a variable */
 .pure-button {
   border-radius: 0;
-  background-color: #FFDD00;
-  color: #0F2446; }
+  background-color: #CC2A41;
+  color: #fff; }
   .pure-button:hover, .pure-button:focus {
     background-image: none;
-    background-color: #0F2446;
-    color: #FFDD00;
+    background-color: #fff;
+    color: #CC2A41;
     transition: all 0.7s ease;
     -webkit-transition: all 0.7s ease;
     -moz-transition: all 0.7s ease;
@@ -142,15 +189,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  width: 100%;
-  min-height: 100vh;
-  display: flex;
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
-  flex-direction: column;
-  -webkit-flex-direction: column;
-  -moz-flex-direction: column; }
+  width: 100%; }
 
 * {
   box-sizing: border-box;
@@ -158,22 +197,19 @@ body {
   -webkit-box-sizing: border-box; }
 
 #wrapper {
-  flex: 1;
-  -webkit-flex: 1;
-  -moz-flex: 1;
-  -ms-flex: 1;
+  min-height: 100%;
   position: relative; }
 
 #header {
-  background-color: #0F2446;
-  color: #FFDD00;
+  background-color: #351330;
+  color: #fff;
   text-align: center;
   -webkit-box-shadow: 0px 3px 5px rgba(100, 100, 100, 0.5);
   -moz-box-shadow: 0px 3px 5px rgba(100, 100, 100, 0.5);
   box-shadow: 0px 3px 5px rgba(100, 100, 100, 0.5); }
   #header h1, #header h2, #header h3, #header h4, #header h5 {
-    background-color: #0F2446;
-    color: #FFDD00; }
+    background-color: #351330;
+    color: #fff; }
 
 /* fix for IE and Firefox responsiveness */
 .pure-g {
@@ -191,10 +227,10 @@ body {
   font-family: "GothamBook", sans-serif; }
 
 .signup-form {
-  background: #E31818;
+  background: #F6F6F6;
   color: #000; }
   .signup-form .pure-button {
-    background: #000;
+    background: #0F2446;
     color: #fff; }
     .signup-form .pure-button:hover {
       transition: all 0.7s ease;
@@ -202,7 +238,7 @@ body {
       -moz-transition: all 0.7s ease;
       -o-transition: all 0.7s ease;
       background: #fff;
-      color: #000; }
+      color: #0F2446; }
 
 .signup-form {
   padding: 1em; }
@@ -229,8 +265,8 @@ body {
     margin-left: 1em; }
 
 #footer {
-  background: #0F2446;
-  color: #FFDD00;
+  background: #424254;
+  color: #fff;
   text-align: center;
   clear: both;
   font-size: 0.75em; }
@@ -238,9 +274,9 @@ body {
     color: #00AEF3;
     text-decoration: none; }
     #footer a:hover {
-      color: #E31818; }
+      color: #fff; }
   #footer .copyright-footer {
-    border: 1px solid #FFDD00; }
+    border: 1px solid #fff; }
     #footer .copyright-footer .copyright-text {
       padding: 1em; }
       #footer .copyright-footer .copyright-text p {
@@ -248,12 +284,12 @@ body {
 
 h1, h2, h3, h4, h5 {
   font-family: "Gotham-Bold", sans-serif;
-  color: #0F2446; }
+  color: #64908A; }
 
 body {
   font-family: "GothamBook", sans-serif;
   font-size: 14pt;
-  color: #0F2446; }
+  color: #351330; }
 
 a {
   font-weight: bold;
