--- a/sass/imports/_custom.scss
+++ b/sass/imports/_custom.scss
@@ -57,16 +57,20 @@ $transition_type: all .7s ease;
 #wrapper {
 	background: #FFEDBF;
 }
+
 .toggle-body {
 	display: none;
 	text-align: center;
+	&.active {
+		display: block;
+	}
 	.body-img {
 		min-height: 15em;
 		position: relative;
 		.body-text {
 			text-align: left;
 			position: absolute;
-			bottom: 0;
+			top: 0;
 			background: rgba($pink,0.7);
 			color: #fff;
 			width: 100%;
