--- a/style/style.css
+++ b/style/style.css
@@ -113,13 +113,15 @@ Either pass the px number through individually, or set it as a variable */
 .toggle-body {
   display: none;
   text-align: center; }
+  .toggle-body.active {
+    display: block; }
   .toggle-body .body-img {
     min-height: 15em;
     position: relative; }
     .toggle-body .body-img .body-text {
       text-align: left;
       position: absolute;
-      bottom: 0;
+      top: 0;
       background: rgba(204, 42, 65, 0.7);
       color: #fff;
       width: 100%;
