--- a/style/style.css
+++ b/style/style.css
@@ -111,50 +111,74 @@ Either pass the px number through individually, or set it as a variable */
   background: #FFEDBF; }
 
 .toggle-body {
-  display: none;
   text-align: center; }
   .toggle-body.active {
     display: block; }
   .toggle-body .body-img {
-    min-height: 15em;
+    min-height: 20em;
     position: relative; }
     .toggle-body .body-img .body-text {
       text-align: left;
       position: absolute;
       top: 0;
-      background: rgba(204, 42, 65, 0.7);
+      left: 0;
+      background: rgba(100, 144, 138, 0.7);
       color: #fff;
+      height: 100%;
       width: 100%;
       padding: 1em; }
+      .toggle-body .body-img .body-text p {
+        font-size: 1.25em; }
+      .toggle-body .body-img .body-text h1 {
+        margin-top: 0;
+        color: #fff; }
   .toggle-body .next {
     margin-top: 1em; }
   .toggle-body .prev {
     margin-bottom: 1em; }
 
+#intro .body-img {
+  background: #CC2A41; }
+  #intro .body-img .body-text {
+    background: transparent; }
+
 #breakfast .body-img {
   background: url(../min_images/bloodies.jpg);
   background-position: center center;
   background-size: cover; }
+  #breakfast .body-img .body-text {
+    background: rgba(204, 42, 65, 0.7); }
 
 #massage .body-img {
   background: url(../min_images/massage.jpg);
   background-position: center center;
   background-size: cover; }
+  #massage .body-img .body-text {
+    background: rgba(66, 66, 84, 0.7); }
 
 #lunch .body-img {
   background: url(../min_images/oysters.jpg);
   background-position: center center;
   background-size: cover; }
+  #lunch .body-img .body-text {
+    background: rgba(100, 144, 138, 0.7); }
 
 #doggos .body-img {
   background: url(../min_images/doggos.jpg);
   background-position: center center;
   background-size: cover; }
+  #doggos .body-img .body-text {
+    background: rgba(53, 19, 48, 0.7); }
 
 #drinks .body-img {
   background: url(../min_images/gin.jpg);
   background-position: center center;
   background-size: cover; }
+  #drinks .body-img .body-text {
+    background: rgba(121, 189, 154, 0.8); }
+
+#outro .body-img {
+  background: #351330; }
 
 .pure-button {
   border-radius: 0;
