--- a/sass/imports/_custom.scss
+++ b/sass/imports/_custom.scss
@@ -66,7 +66,7 @@ $transition_type: all .7s ease;
 		display: block;
 	}
 	.body-img {
-		min-height: 20em;
+		min-height: 100vh;
 		position: relative;
 		.body-text {
 			text-align: left;
