--- a/style/style.css
+++ b/style/style.css
@@ -115,14 +115,13 @@ Either pass the px number through individually, or set it as a variable */
   .toggle-body.active {
     display: block; }
   .toggle-body .body-img {
-    min-height: 100vh;
+    height: 100vh;
     position: relative; }
     .toggle-body .body-img .body-text {
       text-align: left;
       position: absolute;
       top: 0;
       left: 0;
-      background: rgba(100, 144, 138, 0.7);
       color: #fff;
       height: 100%;
       width: 100%;
@@ -179,6 +178,8 @@ Either pass the px number through individually, or set it as a variable */
 
 #outro .body-img {
   background: #351330; }
+  #outro .body-img .body-text {
+    background: transparent; }
 
 .pure-button {
   border-radius: 0;
